# amplify-utils

./: .gitignore  Pipfile  README.md  pyproject.toml  samconfig.toml  template.yml
src/amplify_utils/: __init__.py  __main__.py  lambda.py  lambda_utils.py  schema.py
src/amplify_utils/schema/: __init__.py
tests/: test_amplify_utils.py  test_dump_errors.py  test_serializer.py
