[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplify-utils"
version = "0.0.1"
authors = [
  { name="Isaac Sánchez", email="isaacsancheza@outlook.com" },
]
description = "Amplify Utils"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["pyyaml", "pydantic", "aws-lambda-powertools"]

[project.urls]
"Homepage" = "https://github.com/isaacsancheza/amplify-utils"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = false
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
